--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Astronomy Picture of the Day</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, target-densitydpi=device-dpi">
-    <link rel="stylesheet" href="//chameleon.teknision.com/widgets/common/css/chameleon.css" data-skip="true">
+    <link rel="stylesheet" href="//chameleon.teknision.com/widgets/common/css/chameleon.css">
     <link rel="stylesheet" href="css/widget.css">
   </head>
   <body ng-controller="ApodCtrl">
@@ -18,9 +18,9 @@
     <script type="text/javascript" src="//chameleon.teknision.com/widgets/common/js/chameleon.jquery.js"></script>
     <script type="text/javascript" src="//chameleon.teknision.com/widgets/common/js/chameleon.localization.jquery.js"></script>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
-    <script type="text/javascript" src="//s3.amazonaws.com/widgetgecko/common/js/services/0.0.4/services.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/services.js"></script>
-    <script type="text/javascript" src="js/controllers.js"></script>
+    <script type="text/javascript" src="//s3.amazonaws.com/widgetgecko/common/js/services/0.0.5/services.min.js"></script>
+    <script type="text/javascript" src="js/app.js#0.2.4"></script>
+    <script type="text/javascript" src="js/services.js#0.2.4"></script>
+    <script type="text/javascript" src="js/controllers.js#0.2.4"></script>
   </body>
 </html>
